--- a/obrigado.html
+++ b/obrigado.html
@@ -203,7 +203,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<div class="elementor-element elementor-element-395dc67 elementor-align-justify elementor-widget elementor-widget-button" data-id="395dc67" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://revendaoleosessenciaisatacado.com/" class="elementor-button-link elementor-button elementor-size-lg" role="button">
+			<a href="./" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Voltar ao início</span>
 		</span>
